syntax = "proto2";

import "proto/basic.proto";

package nested;

message Nested {
    message InnerMsg {
        optional sint32 val = 1;
        optional sint32 val2 = 2;
    }
    enum InnerEnum {
        INNER_ENUM_VAL = 0;
    }

    optional .basic.BasicTypes basic = 1;
    oneof inner {
        .basic.Enum enumeration = 2 [default = ENUM_TWO];
        InnerMsg inner_msg = 3;
        InnerEnum inner_enum = 4 [default = INNER_ENUM_VAL];
        bool scalar = 5;
    }
}
